# wgms3d

./: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.status  configure  configure.ac  installScript.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile  Makefile.in
matlab/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  config.h  fortran_interface.h  libwgms3d.cc  libwgms3d.h  make_unique.h  mgp.cc  mgp.h  solver_slepc.cc  solver_superlu_arpack.cc  wgms3d  wgms3d.cc  wgms3d.h
src/.deps/: wgms3d-bezier.Po  wgms3d-diffops.Po  wgms3d-main.Po  wgms3d-mgp.Po  wgms3d-solver_superlu_arpack.Po  wgms3d-wgms3d.Po
tests/: Makefile  Makefile.in
tests/all_field_components/: Makefile  Makefile.in
tests/complex_modes/: Makefile  Makefile.in
tests/disk_resonator/: Makefile  Makefile.in
tests/fiber_convergence/: Makefile  Makefile.in
tests/lossy_materials/: Makefile  Makefile.in
tests/semivectorial/: Makefile  Makefile.in
tests/silicon_strip_waveguide/: Makefile  Makefile.in
tests/tm2te_leakage/: Makefile  Makefile.in
wgms3d.dSYM/Contents/: Info.plist
wgms3d.dSYM/Contents/Resources/DWARF/: wgms3d
